--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
         <button class="btn" id="btn-translate">Translate</button>
 
-        <p>Your <img src="images.jpg" /> Translation will come here 👇</p>
+        <p>Your  Translation will come here 👇</p>
         <div id="output-txt"></div>
     </section>
 
