--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 
     <header id="heading">
         <p>TausifDcoder</p>
-        <h1>Star Trek Klingon Translator <img src=" /> </h1>
+        <h1>Star Trek Klingon Translator <img src="klingon.png" /> </h1>
     </header>
 
 
-    <img class="groot-img" src="Klingon.jpg" alt="The Kligon to speak with  ">
+    <img class="groot-img" src="images.jpg" alt="The Kligon to speak with  ">
 
     <section>
         <textarea id="input-txt" placeholder="Enter the text you want to Translate"></textarea>
