--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
     </section>
 
     <footer>
-        The Klingons are a fictional extraterrestrial humanoid warrior species in the science fiction franchise Star Trek ! But don't know his Language! Here's the translator that converts English 2 Klimgon Language!
-        <br>Have Fun!
+        <p>The Klingons are a fictional extraterrestrial humanoid warrior species in the science fiction franchise Star Trek ! But don't know his Language! Here's the translator that converts English 2 Klimgon Language!
+       </p> <br>Have Fun!
         <ul class="list-unordered footer-list">
-            <li><a class="links" href="mailto: tausifaman222@gmail.com "><i class="far fa-envelope"></i></a> </li>
-            <li><a class="links" href="https://github.com/tausifaman222"><i class='bx bxl-github'></i></a> </li>
-            <li><a class="links" href="https://twitter.com/aman_pubg"><i class='bx bxl-twitter'></i></a></li>
-            <li><a class="links" href="linkedin.com/syed-tausif-ahmed-b7139b1b1"><i class='bx bxl-linkedin'></i></a></li>
+            <li><a class="links" href="mailto: tausifaman222@gmail.com "><i class=" far fa-envelope"></i></a> </li>
+            <li><a class="links" href="https://github.com/tausifaman222"><i class=' bx bxl-github'></i></a> </li>
+            <li><a class="links" href="https://twitter.com/aman_pubg"><i class=' bx bxl-twitter'></i></a></li>
+            <li><a class="links" href="https://www.linkedin.com/in/syed-tausif-ahmed-b7139b1b1"><i class='bx bxl-linkedin'></i></a></li>
         </ul>
-        <p>$_% Coding for Fun /> @| NeogCamp | Syed Tausif Ahmed </p>
+        <p>   $_% Coding for Fun /> @| NeogCamp | Syed Tausif Ahmed </p>
     </footer>
     <script src="app.js"></script>
 </body>
