--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <header id="heading">
         <p>TausifDcoder</p>
-        <h1>Star Trek Klingon Translator <img src="klingon.png" /> </h1>
+        <h1>🌟🌟🌟 Star Trek Klingon Translator ♪♪♪<img src="klingon.png" /> </h1>
     </header>
 
 
@@ -25,7 +25,7 @@
 
         <button class="btn" id="btn-translate">Translate</button>
 
-        <p>Your  Translation will come here 👇</p>
+        <p> ♪♪♪ Your  Translation will come here 👇</p>
         <div id="output-txt"></div>
     </section>
 
